Add multi-value BIG_DECIMAL support (with MV BYTES improvements)
Adds end-to-end multi-value BIG_DECIMAL support: schema, segment
creation (dict/raw/fwd index/stats), block val-sets, transform functions,
aggregation (ARRAY_AGG, distinct aggregate), data block/table serde,
response encoders, and integration tests. Wires the same plumbing for
MV BYTES where it was missing so the two MV types are symmetric.

Also:
- Refactor ExprMinMax wrappers: dispatch on stored type, remove
  redundant isSingleValue plumbing, fix BYTES_ARRAY getField path.
- Make DataSchema BYTES_ARRAY symmetric with BYTES across
  convert / toExternal / format.
- ArrayListUtils: zero-copy fast-path for toBytesArray, new
  toBigDecimalArray.
- TypeUtils.convert: MSE backward-compat downcast BIG_DECIMAL_ARRAY ->
  DOUBLE_ARRAY (until wire protocol supports BIG_DECIMAL_ARRAY), add
  asserts on fallthrough types, handle empty ObjectArrayList.
- Normalize case ordering so BIG_DECIMAL sits immediately after DOUBLE
  across switches touched by this change.